The "Delete" endpoint is finished.
